# AI-Robotics

./: README.md  ReadMe_T1.md  Task3.md  task_1.md  task_4_5.md
ML/LinearR/: linear_reg.ipynb
ML/Logistic/: logistic.ipynb
OpenCV/: aruco.py  aurco.py  balltrack.py
ROS_Tasks/Autonomous_Traversal_(GP)/att/: CMakeLists.txt  package.xml
ROS_Tasks/Autonomous_Traversal_(GP)/att/launch/: att.launch
ROS_Tasks/Autonomous_Traversal_(GP)/att/src/: att.cpp  att_copy2.cpp  att_orig.cpp  att_orig_copy.cpp
ROS_Tasks/Autonomous_Traversal_(GP)/att/src/redundant_cpp/: att1.cpp  att2.cpp  att3.cpp
ROS_Tasks/OA/: CMakeLists.txt  package.xml
ROS_Tasks/OA/launch/: oa.launch
ROS_Tasks/OA/src/: oanode.cpp
ROS_Tasks/chatroom/: CMakeLists.txt  package.xml
ROS_Tasks/chatroom/src/: chat_node1.cpp  chat_node1.cpp.save
ROS_Tasks/rover/urdf/: rover.xacro  zed2.xacro
ROS_Tasks/screengrabs/: Screencast from 10-04-24 05:58:01 PM IST.webm
ROS_Tasks/screengrabs/chatroom/: Screencast from 10-04-24 05:57:23 PM IST.webm
chatroom/: CMakeLists.txt  ChatMessage.msg  package.xml
chatroom/src/: chat_publisher.cpp  chat_subscriber.cpp
lil_martian_slave/: CMakeLists.txt  package.xml
lil_martian_slave/launch/: big_martian_slave_gazebo.launch  lil_martian_slave_gazebo.launch
lil_martian_slave/urdf/: lil_martian_slave.urdf  lil_martian_slave.urdf.xacro  test.xacro
lil_martian_slave/worlds/: rover.world
rover/: CMakeLists.txt  package.xml
rover/launch/: robot_description.launch  world.launch
rover/urdf/: gps.xacro  imu.xacro  rover.gazebo
