<?xml version="1.0"?>
<package format="2">
  <name>OA</name>
  <version>0.0.1</version>
  <description>The OA package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ka3r0x@todo.todo">ka3r0x</maintainer>

  <license>BSD</license>

  <!-- Build dependencies -->
  <build_depend>catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>visualization_msgs</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>catkin</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <build_export_depend>visualization_msgs</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <exec_depend>visualization_msgs</exec_depend>
  


  <!-- Export dependencies -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
